...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tQK-Jn-0g9">
                                <rect key="frame" x="10" y="74" width="355" height="29"/>
                                <segments>
                                    <segment title="Alpha"/>
                                    <segment title="Creation Time"/>
                                </segments>
                                <connections>
                                    <action selector="orderGarmentList:" destination="BYZ-38-t0r" eventType="valueChanged" id="42v-bm-xWA"/>
                                </connections>
                            </segmentedControl>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PvT-gA-lgI">
...
                            <constraint firstItem="PvT-gA-lgI" firstAttribute="top" secondItem="tQK-Jn-0g9" secondAttribute="bottom" constant="10" id="UNU-oF-TJf"/>
                            <constraint firstItem="tQK-Jn-0g9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="WT9-oe-7hX"/>
                            <constraint firstItem="tQK-Jn-0g9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="blJ-mC-Adg"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="List" largeTitleDisplayMode="never" id="PNK-EE-38e">
                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="9eQ-En-NWX">
                            <connections>
                                <action selector="deleteAll:" destination="BYZ-38-t0r" id="Me7-q3-TWs"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="AOX-bl-UVt">
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mhf-vt-lAl">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Add" largeTitleDisplayMode="never" id="A67-Jo-als">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="WdE-Li-Wdd">
                                            <connections>
                                                <action selector="cancel:" destination="9qk-kA-2wx" id="FFv-nz-NnB"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="50l-hw-NpU">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Garment Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChU-mG-jYX">
                                        <rect key="frame" x="0.0" y="0.0" width="335" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Garment Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3WT-NV-4YW">
                                        <rect key="frame" x="0.0" y="30.5" width="335" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
...
